Fix errant spacing next to Get Help button.

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -536,10 +536,6 @@ header {
         }
     }
     a {
-        &:not(.jspArrow) {
-            display: inline-block;
-            margin-left: 10px;
-        }
         &:hover {
             text-decoration: none;
         }
